--- a/student_management_app/templates/registration.html
+++ b/student_management_app/templates/registration.html
@@ -100,14 +100,14 @@
       <form class="form-inline my-2 my-lg-0">
          <!-- <input class="form-control mr-sm-2" type="login" placeholder="login" aria-label="login">-->
          <!--<input class="form-control mr-sm-2" type="Register" placeholder="Register" aria-label="Register">-->
-         <a href="/logi" class="btn btn-outline-success my-1 mx-2">Login Here</a>
+         <a href="/login" class="btn btn-outline-success my-1 mx-2">Login Here</a>
          <a href="/contact" class="btn btn-outline-danger my-1 mx-2">Contact Us</a>
          <!--<input class="form-control mr-sm-2" type="register" placeholder="register" aria-label="register">-->
       </form>
    </div>
 </nav>
 <div class="login-dark form-inline py-0 mx-4 my-4 pl-4 pr-4">
-<form action="{% url 'doRegistration' %}" method="get">
+<form action="{% url 'doRegistration' %}" method="POST">
 {% csrf_token %}
 <h1 class="text-center">Signup</h1>
 <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
@@ -117,19 +117,8 @@
 <div class="form-group"><input class="form-control mb-2" type="password" name="password" placeholder="Password"></div>
 <div class="form-group"><input class="form-control mb-2" type="password" name="confirmPassword" placeholder="Confirm Password"></div>
 <div class="form-group"><button class="btn btn-primary btn-block mt-2 ml-2" type="submit">Register</button></div>
-{% comment %} Display Messages {% endcomment %}
-{% if messages %}
-<div class="col-12">
-   {% for message in messages %}
-   {% if message.tags == "error" %}
-   <div class="alert alert-danger alert-dismissible fade show" role="alert" style="margin-top: 10px;">
-      <b>{{ message }}</b>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-   </div>
-   {% endif %}
-   {% endfor %}
+</form>
 </div>
-{% endif %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 {% endblock content %}
