--- a/student_management_app/templates/home.html
+++ b/student_management_app/templates/home.html
@@ -24,7 +24,6 @@ body {background-color: coral;}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
 </head>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href=""><h3>WELCOME TO CMS</h3></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +35,7 @@ body {background-color: coral;}
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
-  <a href="/logi" class="btn btn-outline-success my-1 mx-2">Login</a>
+  <a href="/login" class="btn btn-outline-success my-1 mx-2">Login</a>
 
        <!--<input class="form-control mr-sm-2" type="Register" placeholder="Register" aria-label="Register">-->
      <a href="/registration" class="btn btn-outline-success my-1 mx-2">Register</a>
